--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/lucasaferrlopes/BasicHTTPServer/issues"
   },
-  "homepage": "https://github.com/lucasaferrlopes/BasicHTTPServer#readme"
+  "homepage": "https://github.com/lucasaferrlopes/BasicHTTPServer#readme",
+  "dependencies": {
+    "connect": "*",
+    "body-parser": "*"
+  }
 }
