--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/lucasaferrlopes/BasicHTTPServer#readme",
   "dependencies": {
-    "connect": "*",
-    "body-parser": "*"
+    "request": "*"
   }
 }
