Implementa requisições GET simples tanto no server quanto no client

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/lucasaferrlopes/BasicHTTPServer#readme",
   "dependencies": {
+    "connect": "*",
+    "body-parser": "*",
     "request": "*"
   }
 }
