Impementa um servidor simples que recebe solicitações POST, e também um client que envia

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "connect": "*",
     "body-parser": "*",
-    "request": "*"
+    "request": "*",
+    "express": "*",
+    "formidable": "*"
   }
 }
