--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
   },
   "homepage": "https://github.com/lucasaferrlopes/BasicHTTPServer#readme",
   "dependencies": {
+    "connect": "*",
+    "serve-static": "*"
   }
 }
