Implementa servidor que manipula URL's para pegar parâmetros

--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
     "url": "https://github.com/lucasaferrlopes/BasicHTTPServer/issues"
   },
   "homepage": "https://github.com/lucasaferrlopes/BasicHTTPServer#readme",
-  "dependencies": {
-    "connect": "*",
-    "serve-static": "*"
-  }
+  "dependencies": {}
 }
