--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "url": "https://github.com/lucasaferrlopes/BasicHTTPServer/issues"
   },
   "homepage": "https://github.com/lucasaferrlopes/BasicHTTPServer#readme",
-  "dependencies": {}
+  "dependencies": {
+    "querystring": "^0.2.0"
+  }
 }
